layout/xul/base/src/nsTextBoxFrame.cpp
@@ -512,6 +512,7 @@ nsTextBoxFrame::DrawText(nsIRenderingContext& aRenderingContext,
                                       &posResolve,
                                       1);
            mAccessKeyInfo->mBeforeWidth = posResolve.visualLeftTwips;
+           mAccessKeyInfo->mAccessWidth = posResolve.visualWidth;
         }
         else
         {
